Add StatisticalModelController and update statistics calculation
A new controller, StatisticalModelController, has been added to handle statistical models. The calculation of statistics in the "WonLost" class has been updated to include a comprehensive set of statistical values. Tests, pom.xml, and the DailyTeamStatistic.java file have been updated accordingly to support these changes.